src/css/style.css
/* REUSEABLE */
.bg-dark{
    background-color: #121212;
}

.font-16{
    font-size: 16px;
}

.center-v{
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
    z-index: 5;
}
.center-h{
    position: absolute;
    top: 50%;
    transform: translate(-50%, 0);
}
/* FIRST SETUP */

html{
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
}

.columns{
    padding: 0 !important;
}
.columns{
    margin: 0 !important;
}
.column{
    padding: 0 !important;
}
.column{
    margin: 0 !important;
}

/* --------NAV--------------- */
nav{
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 10vh;
    background-color: #333333;
    font-family: Arial, Helvetica, sans-serif;
}
.nav-links{
    display: flex;
    justify-content: space-around;
    width: 50%;
}

.nav-links a{
    color: white;
    text-decoration: none;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 16px;
}

.nav-burgur{
    display: none;
    cursor: pointer;
    position: absolute;
    right: 5vw;
}

.nav-burgur div{
    width: 25px;
    height: 5px;
    background-color: white;
    margin: 3px;
}

@media screen and (max-width: 1023px){
    .nav-links{
        width: 60%;
    }
}
@media screen and (max-width: 767px){
    body{
        overflow-x: hidden;
    }
    .nav-links{
        position: absolute;
        right: 0px;
        height: 90vh;
        top: 10vh;
        z-index: 20;
        background-color: #333333;
        flex-direction: column;
        justify-content: space-around;
        text-align: center;
        width: 30%;
        transform: translateX(100%);
        transition: all 0.5s ease-in;
    }
    .nav-links li{
        opacity: 0;
    }
    .nav-burgur{
        display: block;

    }
}

.nav-active{
    transform: translateX(0%);
}

@keyframes navLinkFade{
    from {
        opacity: 0;
        transform: translateX(50px);
    }
    to {
        opacity: 1;
        transform: translateX(0px);
    }
}



/* -------------------------------- */

/* TOP CAROUSEL */
.owl-carousel{
    position: relative;
  }
  
.owl-dots{
    position: absolute;
    left: 25%;
    right: 25%;
    bottom: 0%;
    
}

#top-carousel .owl-dots .owl-dot span{
    width: 50px !important;
    height: 2px !important;
    background-color: #5a5a5a !important;
    
}
#top-carousel .owl-dots .owl-dot.active span{
    width: 50px !important;
    height: 4px !important;
    background-color: #df0000 !important;
}
#top-carousel .owl-dots .owl-dot span:hover{
    width: 50px !important;
    height: 4px !important;
    background-color: #df0000 !important;
}

/* --------------------------------------------- */

/* TOP PRODUCT */

.row{
    /* margin-top: 2.5px !important;
    margin-bottom: 2.5px !important; */
    padding: 2.5px !important;
}
.col{
    padding: 2.5px !important;
}

.top-product{
    position: relative;
}

.top-product-title{
    width: 100%;
    z-index: 10;
    position: absolute;
    top: 5%;
    left: 50%;
    transform: translate(-50%, 0);
    color: white;
    font-weight: bolder;
    font-size: 20px;
}
@media only screen and (max-width: 1023px) {
    .top-product-title{
    z-index: 10;
    position: absolute;
    top: 50%;
    left: -100%;
    transform: translate(0, -50%);
    color: white;
    font-weight: bolder;
    font-size: 20px;
    }
  }

  @media only screen and (max-width: 767px) {
    .top-product-title{
        width: 100%;
        z-index: 10;
        position: absolute;
        top: 5%;
        left: 50%;
        transform: translate(-50%, 0);
        color: white;
        font-weight: bolder;
        font-size: 20px;
    }
  }
/* -------------------------------------------- */

/* CREATIVE SECTION */
.creattive-section{
    height: 500px;
    background-image: linear-gradient(45deg, rgba(2,33,64,0.2) 55%, rgba(45,95,93,0.3)), url(../img/create-banner.jpg);
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    position: relative;
    transition: all 3s;
}


.creative{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.creattive-section .columns, .creattive-section h1{
    margin: 0 auto !important;
    text-align: center;
}

.creattive-section h1{
    color: gray;
    background-color: white;
}

.btn{
    text-align: center;
}

.support-section .register-img{
    background-image: linear-gradient(45deg, rgba(2,33,64,0.2) 55%, rgba(45,95,93,0.3)), url(../img/register.jpg);
    background-position: center;
    background-size: cover;
    position: relative;
}

.support-section .support-img{
    background-image: linear-gradient(45deg, rgba(2,33,64,0.2) 55%, rgba(45,95,93,0.3)), url(../img/support.jpg);
    background-position: center;
    background-size: cover;
    position: relative;
}

.support-item{
    width: 90%;
    text-align: center;
    color: white;
    font-size: 50px;
    font-weight: 400;
}
.support-item h4{
    font-size: 20px;
}
.support-item p{
    font-size: 15px !important;
}

.center-item{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.image:hover{
    filter: brightness(1.2);
    transition: all .5s;
}


/* FOOTER */
.footer{
    padding-bottom: 1.5rem !important;
}
.foot-title{
    color: white;
    font-weight: 400;
}
.foot-contents li a{
    color: rgb(148, 148, 148);
    font-size: 16px;
    font-weight: 300;
}

hr{
    border-width: 1px;
}

.foot-logo{
    width: 50px;
    display: inline-block;
}

.copyright-section{
    border-top: 1px solid white;
    margin-left: -15px;
    margin-right: -15px;
}
.copyright-section .columns{
    margin-top: 10px !important;
}

.copyright-section p{
    display: inline-block;
    font-size: 16px;
}


/* -----------------------------------model img -----------------------------------*/
.model-img {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
  }
/* ... */

